# company-details

./: .gitignore  ALL_FIXED.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  FAST_FAIL_TIMEOUT.md  FINAL_STATUS.md  IMPORT_FIXES.md  MIGRATION_GUIDE.md  Makefile  PERFORMANCE.md  PYTHONPATH_FIXES.md  QUICK_START.md  README.md  READY.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_PLAN.md  STRUCTURE.txt  TELEGRAM_TESTS.md  TESTING_GUIDE.md  TEST_LOGGING.md  WHY_TESTS_SLOW.md  commands.sh  pyproject.toml  requirements.txt  server.sh  test.py  test_imports.py
company_insight_service/: .antigravityignore  .gitignore  README.md  __init__.py  docker-compose.yml  main.py.old  run_api.py  run_worker.py  services.py.old  start_parallel.sh
company_insight_service/api/: __init__.py  app.py
company_insight_service/api/routes/: __init__.py  company.py  health.py
company_insight_service/config/: __init__.py  settings.py
company_insight_service/core/: __init__.py  signals.py
company_insight_service/database/: __init__.py  models.py
company_insight_service/scripts/: run_tests.sh  start_api.sh  start_parallel.sh  start_workers.sh  test_telegram.sh
company_insight_service/services/: __init__.py  company.py  scraping.py  search.py  sentiment.py  stock.py
company_insight_service/tests/: conftest.py  requirements-test.txt  test_api.py  test_services.py  test_system.py
company_insight_service/workers/: __init__.py  consumer.py  queue_utils.py
company_insight_service/workflows/: __init__.py  company_research.py
